--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -6,3 +6,7 @@ public net.minecraft.world.entity.npc.VillagerType f_35827_
 public net.minecraft.world.entity.vehicle.Boat f_38285_
 public net.minecraft.world.entity.vehicle.Boat f_38281_
 public net.minecraft.world.entity.vehicle.Boat f_38279_
+
+public net.minecraft.world.entity.ai.goal.EatBlockGoal f_25204_
+public net.minecraft.world.entity.ai.goal.EatBlockGoal f_25202_
+public net.minecraft.world.entity.ai.goal.EatBlockGoal f_25203_
