--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,6 +7,4 @@ public net.minecraft.world.entity.vehicle.Boat f_38285_
 public net.minecraft.world.entity.vehicle.Boat f_38281_
 public net.minecraft.world.entity.vehicle.Boat f_38279_
 
-public net.minecraft.world.entity.ai.goal.EatBlockGoal f_25204_
-public net.minecraft.world.entity.ai.goal.EatBlockGoal f_25202_
-public net.minecraft.world.entity.ai.goal.EatBlockGoal f_25203_
+public net.minecraft.world.damagesource.DamageSources *()
