--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="All rights reserved"
 
 [[mods]]
 modId="regions_unexplored"
-version="0.4.1"
+version="05.13_01"
 displayName="Regions Unexplored"
 displayURL="https://discord.gg/Ss8UHPqHPj"
 logoFile="ruthumb.png"
